<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RiddleGameActivity"
    android:background="@drawable/splatterbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textColor="#8d6590"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:gravity="center" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textColor="#5f5f77"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"

        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="40sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:onClick="start"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp" />

</RelativeLayout>
