<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jiale.riddlegame.RiddleGameMain"
    android:background="@drawable/background"
    android:id="@+id/gameLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/question"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="#645b65"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer"
        android:id="@+id/answer"
        android:textColor="#645b65"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:rowCount="4"
        android:id="@+id/gridLayout"

        android:useDefaultMargins="true"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/answer"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="a"
            android:id="@+id/button1"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="buttonClicked"
            android:clickable="true" />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="b"
            android:id="@+id/button2"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="buttonClicked" />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="c"
            android:id="@+id/button3"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="d"
            android:id="@+id/button4"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="e"
            android:id="@+id/button5"
            android:layout_row="0"
            android:layout_column="4"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="f"
            android:id="@+id/button6"
            android:layout_row="0"
            android:layout_column="5"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="g"
            android:id="@+id/button7"
            android:layout_row="0"
            android:layout_column="6"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="h"
            android:id="@+id/button8"
            android:layout_row="0"
            android:layout_column="7"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="i"
            android:id="@+id/button9"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="j"
            android:id="@+id/button10"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="k"
            android:id="@+id/button11"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="l"
            android:id="@+id/button12"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="m"
            android:id="@+id/button13"
            android:layout_row="1"
            android:layout_column="4"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="n"
            android:id="@+id/button14"
            android:layout_row="1"
            android:layout_column="5"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="o"
            android:id="@+id/button15"
            android:layout_row="1"
            android:layout_column="6"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="p"
            android:id="@+id/button16"
            android:layout_row="1"
            android:layout_column="7"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="q"
            android:id="@+id/button17"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="r"
            android:id="@+id/button18"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="s"
            android:id="@+id/button20"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="t"
            android:id="@+id/button21"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="u"
            android:id="@+id/button22"
            android:layout_row="2"
            android:layout_column="4"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="v"
            android:id="@+id/button23"
            android:layout_row="2"
            android:layout_column="5"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="w"
            android:id="@+id/button24"
            android:layout_row="2"
            android:layout_column="6"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="x"
            android:id="@+id/button25"
            android:layout_row="2"
            android:layout_column="7"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="y"
            android:id="@+id/button26"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="buttonClicked"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="z"
            android:id="@+id/button27"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="buttonClicked"/>


    </GridLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:onClick="giveUp"
        android:layout_below="@+id/score"
        android:layout_alignRight="@+id/answer"
        android:layout_alignEnd="@+id/answer"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_below="@+id/gridLayout"
        android:layout_alignLeft="@+id/answer"
        android:layout_alignStart="@+id/answer" />
</RelativeLayout>
